--- a/authentication.ipynb
+++ b/authentication.ipynb
@@ -2,25 +2,77 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd # type: ignore"
+    "import numpy as np # linear algebra\n",
+    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, classification_report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lung_df= pd.read_csv('lung_cancer.csv')"
+    "lung_cancer_dataset= pd.read_csv('lung_cancer.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3000 entries, 0 to 2999\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column                 Non-Null Count  Dtype \n",
+      "---  ------                 --------------  ----- \n",
+      " 0   GENDER                 3000 non-null   object\n",
+      " 1   AGE                    3000 non-null   int64 \n",
+      " 2   SMOKING                3000 non-null   object\n",
+      " 3   YELLOW_FINGERS         3000 non-null   object\n",
+      " 4   ANXIETY                3000 non-null   object\n",
+      " 5   PEER_PRESSURE          3000 non-null   object\n",
+      " 6   CHRONIC_DISEASE        3000 non-null   object\n",
+      " 7   FATIGUE                3000 non-null   object\n",
+      " 8   ALLERGY                3000 non-null   object\n",
+      " 9   WHEEZING               3000 non-null   object\n",
+      " 10  ALCOHOL_CONSUMING      3000 non-null   object\n",
+      " 11  COUGHING               3000 non-null   object\n",
+      " 12  SHORTNESS_OF_BREATH    3000 non-null   object\n",
+      " 13  SWALLOWING_DIFFICULTY  3000 non-null   object\n",
+      " 14  CHEST_PAIN             3000 non-null   object\n",
+      " 15  LUNG_CANCER            3000 non-null   object\n",
+      "dtypes: int64(1), object(15)\n",
+      "memory usage: 375.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "lung_cancer_dataset.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -185,13 +237,493 @@
        "4                   Yes         No          NO  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lung_df.head()"
+    "lung_cancer_dataset.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AGE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>3000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>55.169000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>14.723746</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>30.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>42.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>55.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>68.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>80.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               AGE\n",
+       "count  3000.000000\n",
+       "mean     55.169000\n",
+       "std      14.723746\n",
+       "min      30.000000\n",
+       "25%      42.000000\n",
+       "50%      55.000000\n",
+       "75%      68.000000\n",
+       "max      80.000000"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lung_cancer_dataset.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GENDER                   0\n",
+       "AGE                      0\n",
+       "SMOKING                  0\n",
+       "YELLOW_FINGERS           0\n",
+       "ANXIETY                  0\n",
+       "PEER_PRESSURE            0\n",
+       "CHRONIC_DISEASE          0\n",
+       "FATIGUE                  0\n",
+       "ALLERGY                  0\n",
+       "WHEEZING                 0\n",
+       "ALCOHOL_CONSUMING        0\n",
+       "COUGHING                 0\n",
+       "SHORTNESS_OF_BREATH      0\n",
+       "SWALLOWING_DIFFICULTY    0\n",
+       "CHEST_PAIN               0\n",
+       "LUNG_CANCER              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lung_cancer_dataset.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3000, 16)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lung_cancer_dataset.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label = \"LUNG_CANCER\"\n",
+    "features = [element for element in lung_cancer_dataset.columns if element != label]\n",
+    "categorical_features = [element for element in features if element != \"AGE\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = lung_cancer_dataset[features]\n",
+    "target = lung_cancer_dataset[label]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_label_enc = LabelEncoder()\n",
+    "target = my_label_enc.fit_transform(target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GENDER</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>SMOKING</th>\n",
+       "      <th>YELLOW_FINGERS</th>\n",
+       "      <th>ANXIETY</th>\n",
+       "      <th>PEER_PRESSURE</th>\n",
+       "      <th>CHRONIC_DISEASE</th>\n",
+       "      <th>FATIGUE</th>\n",
+       "      <th>ALLERGY</th>\n",
+       "      <th>WHEEZING</th>\n",
+       "      <th>ALCOHOL_CONSUMING</th>\n",
+       "      <th>COUGHING</th>\n",
+       "      <th>SHORTNESS_OF_BREATH</th>\n",
+       "      <th>SWALLOWING_DIFFICULTY</th>\n",
+       "      <th>CHEST_PAIN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.94</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   GENDER   AGE  SMOKING  YELLOW_FINGERS  ANXIETY  PEER_PRESSURE  \\\n",
+       "0     1.0  0.70      1.0             1.0      1.0            0.0   \n",
+       "1     0.0  0.50      1.0             0.0      0.0            1.0   \n",
+       "2     0.0  0.96      0.0             0.0      1.0            1.0   \n",
+       "3     1.0  0.60      0.0             1.0      1.0            1.0   \n",
+       "4     0.0  1.00      1.0             1.0      0.0            1.0   \n",
+       "5     0.0  0.56      1.0             1.0      1.0            0.0   \n",
+       "6     0.0  0.80      1.0             1.0      1.0            0.0   \n",
+       "7     0.0  0.88      0.0             0.0      1.0            1.0   \n",
+       "8     1.0  0.94      1.0             0.0      1.0            0.0   \n",
+       "9     0.0  0.74      0.0             0.0      0.0            0.0   \n",
+       "\n",
+       "   CHRONIC_DISEASE  FATIGUE  ALLERGY  WHEEZING  ALCOHOL_CONSUMING  COUGHING  \\\n",
+       "0              0.0      1.0      0.0       0.0                0.0       0.0   \n",
+       "1              1.0      0.0      0.0       0.0                1.0       1.0   \n",
+       "2              1.0      0.0      1.0       0.0                1.0       1.0   \n",
+       "3              0.0      1.0      0.0       1.0                1.0       0.0   \n",
+       "4              1.0      0.0      1.0       0.0                1.0       1.0   \n",
+       "5              0.0      0.0      0.0       1.0                0.0       0.0   \n",
+       "6              0.0      1.0      0.0       0.0                0.0       0.0   \n",
+       "7              1.0      1.0      0.0       1.0                1.0       1.0   \n",
+       "8              1.0      1.0      1.0       1.0                0.0       1.0   \n",
+       "9              1.0      0.0      0.0       1.0                0.0       1.0   \n",
+       "\n",
+       "   SHORTNESS_OF_BREATH  SWALLOWING_DIFFICULTY  CHEST_PAIN  \n",
+       "0                  0.0                    0.0         1.0  \n",
+       "1                  1.0                    0.0         0.0  \n",
+       "2                  0.0                    1.0         1.0  \n",
+       "3                  1.0                    0.0         0.0  \n",
+       "4                  1.0                    1.0         0.0  \n",
+       "5                  1.0                    1.0         0.0  \n",
+       "6                  0.0                    0.0         1.0  \n",
+       "7                  1.0                    0.0         1.0  \n",
+       "8                  1.0                    1.0         0.0  \n",
+       "9                  0.0                    1.0         1.0  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_ord_enc = OrdinalEncoder()\n",
+    "data[categorical_features] = my_ord_enc.fit_transform(data[categorical_features])\n",
+    "my_minmax_scaler = MinMaxScaler()\n",
+    "data[[\"GENDER\", \"AGE\"]] = my_minmax_scaler.fit_transform(data[[\"GENDER\", \"AGE\"]])\n",
+    "data.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((2250, 15), (750, 15), (2250,), (750,))"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"CHEST_PAIN\"] = (data[\"CHEST_PAIN\"]+1)**(data[\"SMOKING\"]+1)\n",
+    "data[\"COUGHING\"] == (data[\"COUGHING\"]+1)**(data[\"SMOKING\"]+2)\n",
+    "data[\"SHORTNESS_OF_BREATH\"] == (data[\"SHORTNESS_OF_BREATH\"]+1)**(data[\"SMOKING\"]+4)\n",
+    "data[\"FATIGUE\"] == (data[\"FATIGUE\"]+1)**(data[\"SMOKING\"]+data[\"COUGHING\"]+5)\n",
+    "data[\"COUGHING\"] == (data[\"COUGHING\"]+1)**(data[\"SMOKING\"]+data[\"FATIGUE\"]+data[\"COUGHING\"]+data[\"CHRONIC_DISEASE\"]*3)\n",
+    "data[\"WHEEZING\"] == (data[\"WHEEZING\"]**data[\"SMOKING\"]+data[\"FATIGUE\"]+1)\n",
+    "data_train, data_test, target_train, target_test = train_test_split(data, target, test_size=0.25, random_state=42)\n",
+    "data_train.shape, data_test.shape, target_train.shape, target_test.shape"
    ]
   }
  ],
@@ -211,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
