--- a/authentication.ipynb
+++ b/authentication.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,13 +29,15 @@
     "\n",
     "# Model validation\n",
     "from sklearn.model_selection import train_test_split\n",
+    "# Feature extraction\n",
+    "from sklearn.decomposition import PCA\n",
     "# Feature selection\n",
-    "from sklearn.decomposition import PCA\n"
+    "from sklearn.feature_selection import SelectFdr, f_classif"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +202,7 @@
        "4                   Yes         No          NO  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +543,7 @@
        "max                    NaN                   NaN        NaN         NaN  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +583,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +604,7 @@
        "(3000, 16)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,20 +653,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\97798\\AppData\\Local\\Temp\\ipykernel_20252\\1120627390.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\97798\\AppData\\Local\\Temp\\ipykernel_18836\\1120627390.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data[categorical_features] = my_ord_enc.fit_transform(data[categorical_features])\n",
-      "C:\\Users\\97798\\AppData\\Local\\Temp\\ipykernel_20252\\1120627390.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\97798\\AppData\\Local\\Temp\\ipykernel_18836\\1120627390.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -828,7 +830,7 @@
        "4                  1.0                    1.0         0.0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 259,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1235,7 @@
        "CHEST_PAIN                        0.010606               0.015282    1.000000  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -1563,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -1626,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -1677,6 +1679,55 @@
     "disp.plot()\n",
     "print(\"Classification Report for SVM: \")\n",
     "print(classification_report(y_test, predictions))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "False Discovery Rate (Feature Selection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Standardize the data\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Apply FDR for feature selection\n",
+    "fdr_selector = SelectFdr(f_classif, alpha=0.05)\n",
+    "X_fdr = fdr_selector.fit_transform(X_scaled, y)\n",
+    "\n",
+    "# Check the shape of the selected features\n",
+    "print(\"Original number of features:\", X.shape[1])\n",
+    "print(\"Number of features selected by FDR:\", X_fdr.shape[1])\n",
+    "\n",
+    "# Convert to a DataFrame for easier plotting\n",
+    "num_selected_features = X_fdr.shape[1]  # Get the number of features selected\n",
+    "df_fdr = pd.DataFrame(data=X_fdr, columns=[f'Feature {i+1}' for i in range(num_selected_features)])\n",
+    "df_fdr['target'] = y\n",
+    "\n",
+    "# Check if at least two features were selected\n",
+    "if num_selected_features >= 2:\n",
+    "    # Plot the results using the first two selected features\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    colors = ['r', 'g']\n",
+    "    for i, color in enumerate(colors):\n",
+    "        plt.scatter(df_fdr.loc[df_fdr['target'] == i, 'Feature 1'], \n",
+    "                    df_fdr.loc[df_fdr['target'] == i, 'Feature 2'], \n",
+    "                    color=color, label=f'Class {i}')\n",
+    "\n",
+    "    plt.xlabel('Feature 1')\n",
+    "    plt.ylabel('Feature 2')\n",
+    "    plt.legend()\n",
+    "    plt.title('Feature Selection with FDR')\n",
+    "    plt.show()\n",
+    "else:\n",
+    "    print(f\"Only {num_selected_features} feature(s) were selected by FDR. Not enough to plot Feature 1 vs Feature 2.\")"
    ]
   }
  ],
