--- a/authentication.ipynb
+++ b/authentication.ipynb
@@ -1493,7 +1493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mc Nemars Test as KNN and SVM have similar predictions"
+    "Mc Nemars Test as KNN and SVM."
    ]
   },
   {
@@ -1658,7 +1658,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mc Nemar's Test as DTC and RF have similar predictions"
+    "Mc Nemar's Test as DTC and RF."
    ]
   },
   {
